<resources>
    <string name="app_name">4 en 1</string>

    <!-- Inicio -->
    <string name="btn_Ejercicio1">Cambio de divisas</string>
    <string name="btn_Ejercicio2">Navegación</string>
    <string name="btn_Ejercicio3">Contador de cafés</string>
    <string name="btn_Ejercicio4">Mensaje entre Activities</string>
    <string name="btn_Ejercicio6">Obtener fecha y hora</string>
    <string name="btn_Ejercicio5">Ejercicio propio</string>
    <string name="txtV_msgInicio">¿Qué ejercicio deseas ver?</string>

    <!-- Obtener fecha y hora -->
    <string name="txtV_HoraFecha">Fecha y hora</string>
    <string name="txtV_ObtenerDatos">Obtener fecha y hora</string>
    <string name="descImage">Logo Android</string>

    <!-- DivisasActivity -->
    <string name="title_ConversorMonedas">Conversor de monedas</string>
    <string name="radB_DolaresEuros">Dolares a euros</string>
    <string name="radB_EurosDolares">Euros a dolares</string>
    <string name="btn_Convertir">Convertir</string>
    <string name="txtV_Dolares">Dolares</string>
    <string name="txtV_Euros">Euros</string>
    <string name="txtV_CambioActual">Cambio actual</string>

    <!-- Contador de cafés -->
    <string name="txtV_ContadorCafes">Llevas 0 cafe(s)</string>
    <string name="txtV_MarcadorTiempo">0:00</string>
    <string name="btn_masTiempo">+</string>
    <string name="btn_menosTiempo">-</string>
    <string name="btn_TimerEmpieza">Tomar café</string>

    <!-- Mensaje entre Activities -->
    <string name="btn_EnviarMensaje">Saludar</string>
    <string name="txtV_NombreUsuario">Escribe tu nombre</string>
    <string name="txtV_BienvenidaUsuario">Bienvenid@, %1$s</string>

    <!-- Navegacion web -->
    <string name="txtV_WebAVisitar">¿Que web deseas visitar?</string>
    <string name="btn_VisitarPagina">Visitar pagina</string>
    <string name="btn_VisitarPaginaWebView">Visitar pagina con WebView</string>

    <!-- Adivinar numero -->
    <string name="btn_NumeroSuperior">+</string>
    <string name="btn_NumeroInferior">-</string>
    <string name="btn_ProbarNumero">Probar nuevo numero</string>
    <string name="btn_GenerarNuevoNumero">Generar nuevo numero</string>
    <string name="txtV_AdivinaNumero">¡Adivina un número entre 0 y 20!</string>
    <string name="txtV_Pistas">¿Cual es tu número?</string>
</resources>
