<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtV_msgInicio"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Ejercicio1"
        android:onClick="manageOnClick"
        android:text="@string/btn_Ejercicio1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Ejercicio2"
        android:onClick="manageOnClick"
        android:text="@string/btn_Ejercicio2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Ejercicio3"
        android:onClick="manageOnClick"
        android:text="@string/btn_Ejercicio3"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Ejercicio4"
        android:onClick="manageOnClick"
        android:text="@string/btn_Ejercicio4"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Ejercicio5"
        android:onClick="manageOnClick"
        android:text="@string/btn_Ejercicio5"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Ejercicio6"
        android:onClick="manageOnClick"
        android:text="@string/btn_Ejercicio6"/>

</LinearLayout>
